package dev.dluks.rental.model.rental;

public enum RentalStatus {
    ACTIVE,
    COMPLETED,
    CANCELLED
}
