package dev.dluks.rental.model.vehicle;

public enum VehicleStatus {
    AVAILABLE,
    RENTED,
}
